--- a/.luarc.json
+++ b/.luarc.json
@@ -1,3 +1,6 @@
 {
-    "runtime.version": "Lua 5.2"
+    "runtime.version": "Lua 5.2",
+    "diagnostics.disable": [
+        "redundant-parameter"
+    ]
   }
