added global dec for love and jit to .luarc.json

--- a/.luarc.json
+++ b/.luarc.json
@@ -2,5 +2,7 @@
     "runtime.version": "Lua 5.2",
     "diagnostics.disable": [
         "redundant-parameter"
-    ]
+    ],
+    "diagnostics.ignoredFiles": "Disable",
+    "diagnostics.globals": ["love","jit"]
   }
